# physics-constraint-solver

./: .gitignore  .gitmodules  .nvim.lua  CMakeLists.txt  README.md
include/: defines.hpp  matrix.hpp  shader.hpp  sle_solver.hpp  system_state.hpp
shader/: circleFrag.glsl  circleVert.glsl  gridFrag.glsl  gridVert.glsl
src/: main.cpp  matrix.cpp  odesolver.cpp  shader.cpp  sle_solver.cpp  system_state.cpp
